tests/baselines/reference/classWithPredefinedTypesAsNames2.errors.txt
==== tests/cases/compiler/classWithPredefinedTypesAsNames2.ts (1 errors) ====
    // classes cannot use predefined types as names
    
    class void {}
    ~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.